# avatar-mongodb-hackathon

backend/: Makefile  README.md  alembic.ini  main.py  mypy.ini  pyproject.toml  pytest.ini  railway.toml
backend/app/: main.py
backend/app/config/: settings.py
backend/app/core/entities/: common.py
backend/app/core/services/: conversation_services.py  index_services.py
client/: index.html  index.js  package-lock.json  package.json  server.js
